--- a/app/src/main/res/layout/activity_confirmar_menu.xml
+++ b/app/src/main/res/layout/activity_confirmar_menu.xml
@@ -111,8 +111,8 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="221dp"
-            app:srcCompat="@drawable/firma" />
+            android:layout_width="172dp"
+            android:layout_height="111dp"
+            app:srcCompat="@drawable/logociber" />
     </TableRow>
 </LinearLayout>
